# aes

./: .gitignore  .gitlint  CMakeLists.txt  LICENSE  README.md
.cspell/: cspell.config.yaml  project-words.txt
.github/actions/clangformat/: action.yml
.github/actions/clangtidy/: action.yml
.github/actions/cspell/: action.yml
.github/actions/gitlint/: action.yml
.github/actions/gitspell/: action.yml
.github/actions/jq_format/: action.yml
.github/actions/jq_valid/: action.yml
.github/actions/mdformat/: action.yml
.github/actions/shellcheck/: action.yml
.github/actions/shfmt/: action.yml
.github/actions/yamlfix/: action.yml
.github/actions/yamllint/: action.yml
.github/matchers/: cspell.json  fmt.json  jq_valid.json  shellcheck.json
.github/workflows/: main.yml
include/: kica_aes.hpp  s_box.hpp  subkey_factory.hpp  utilities.hpp
pipeline/: Dockerfile
scripts/: build.sh  run.sh  run_in_docker.sh
scripts/workflows/: clangformat.sh  clangtidy.sh  cspell.sh  gitlint.sh  gitspell.sh  jq_format.sh  jq_valid.sh  mdformat.sh  out_wrapper.sh  shellcheck.sh  shfmt.sh  yamlfix.sh  yamllint.sh
src/: kica_aes.cpp  main.cpp
